# vanity

./: Cargo.toml
src/: main.rs
