[package]
name = "vanity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip32 = { version = "0.5.1", features = ["mnemonic", "bip39"] }
hex = "0.4.3"
libsecp256k1 = "0.7.1"
rand = { version = "0.8.5", features = ["getrandom"] }
sha3 = "0.10.8"
